--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -19,4 +19,11 @@ h1 {
 
 a {
     color: #007bff; /* Bootstrap link blue color */
+
+}
+
+div {
+    position: relative;
+    z-index: 1;
+    padding: 10px;
 }
